authorization + get img/video/status from uploader
