# src/static/swagger.json
@@ -1,6 +1,21 @@
 {
   "openapi": "3.0.0",
   "info": { "title": "Sample API", "version": "1.0" },
+  "components": {
+    "securitySchemes": {
+      "jwtAuth": {
+        "type": "apiKey",
+        "in": "header",
+        "name": "Authorization",
+        "description": "Enter JWT token directly (e.g., `<your_jwt_token>`)"
+      }
+    }
+  },
+  "security": [
+    {
+      "jwtAuth": []
+    }
+  ],
   "tags": [
     {
       "name": "Users",
@@ -74,17 +89,26 @@
     "/image/": {
       "$ref": "./imageSwagger/noID.json"
     },
+    "/image/uploader/{id}": {
+      "$ref": "./imageSwagger/uploader.json"
+    },
     "/text/{id}": {
       "$ref": "./textSwagger/ID.json"
     },
     "/text/": {
       "$ref": "./textSwagger/noID.json"
     },
+    "/text/uploader/{id}": {
+      "$ref": "./textSwagger/uploader.json"
+    },
     "/trafficStatusInfo/{id}": {
       "$ref": "./trafficStatusInfoSwagger/ID.json"
     },
     "/trafficStatusInfo/": {
       "$ref": "./trafficStatusInfoSwagger/noID.json"
+    },
+    "/trafficStatusInfo/uploader/{id}": {
+      "$ref": "./trafficStatusInfoSwagger/uploader.json"
     },
     "/nodeOSM/{id}": {
       "$ref": "./NodeOSMSwagger/ID.json"
